fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 1em;
 }
 
-div#main {
+#main {
     padding-top: 1.5em;
     padding-left: 2em;
     padding-right: 2em;
@@ -59,6 +59,14 @@ div#main {
     position: relative;
     overflow: hidden;
     width: fit-content;
+}
+
+#ascii-box {
+    position: absolute;
+    top: 0;
+    left: 7px;
+    white-space: pre;
+    pointer-events: none;
 }
 
 @media only screen and (min-width: 600px) {
@@ -83,14 +91,6 @@ div#main {
     div#main {
         max-width: 35%;
     }
-}
-
-#ascii-box {
-    position: absolute;
-    top: 0;
-    left: 4px;
-    white-space: pre;
-    pointer-events: none;
 }
 
 p#name {
